Fixed spacing on media items in layer 2

--- a/Site/style.css
+++ b/Site/style.css
@@ -96,6 +96,12 @@ body{
     text-align: center;
 }
 
+.container .media-item{
+    height: 200px;
+    width: 200px;
+
+}
+
 .container img{
     height: 100px;
     width: 100px;
